--- a/AppointmentControlWeb/src/app/feature/dashboard/dashboard.component.html
+++ b/AppointmentControlWeb/src/app/feature/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="row">
             <div class="col-md-7">
-                <input class="form-control" (keyup)="onSearchPatient($event.target.value)" [(ngModel)]="searchPatient" type="text" formControlName="txtSearchPatient" placeholder="" aria-label="Enter name or identity" />
+                <input class="form-control" (keyup)="onSearchPatient($event.target.value,false)" [(ngModel)]="searchPatient" type="text" formControlName="txtSearchPatient" placeholder="" aria-label="Enter name or identity" />
             </div>
         </div>
         <div *ngIf="listPatient.length>0" class="row p-3">
@@ -14,9 +14,9 @@
                 <table class="table">
                     <thead class="thead-dark">
                         <tr>
-                            <th style="width: 70%;">Name</th>
-                            <th style="width: 20%;">Identity</th>
-                            <th style="width: 10%;"></th>
+                            <th style="width: 55%;">Name</th>
+                            <th style="width: 25%;">Identity</th>
+                            <th style="width: 15%;"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -26,10 +26,16 @@
                             <td><button class="btn-eye" (click)="goToViewPatient(entry)"><span
                                         class="material-icons ">
                                         remove_red_eye
-                                    </span></button></td>
+                                    </span></button> &nbsp;
+                                <button class="btn-eye" (click)="addAppointment(entry)"><span
+                                        class="material-icons ">
+                                        library_add_check
+                                    </span></button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
+</div>
